# shared_memory

./: Cargo.toml  README.md  changelog.md
examples/: basic.rs  event.rs  mutex.rs
src/: lib.rs
tests/: general.rs  posix_semantics.rs
