[package]
name = "shared_memory_extended"
description = "A user friendly crate that allows you to share memory between processes"
version = "0.13.0"
authors = ["ElasT0ny <elast0ny00@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

#Extra fields for crates.io
readme = "README.md"
documentation = "https://docs.rs/shared_memory_extended"
repository = "https://github.com/phil-opp/shared_memory"
keywords = ["shmem", "shared", "memory", "inter-process", "process"]
categories = [
    "os::unix-apis",
    "os::windows-apis",
    "memory-management",
    "concurrency",
    "asynchronous",
]

exclude = ["ci/*", ".github/*"]

[features]
default = []
logging = ["log"]

[dependencies]
cfg-if = "1.0"
rand = "0.8"
log = { version = "0.4", optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.26", default-features = false, features = ["fs", "mman"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
win-sys = "0.3"

[dev-dependencies]
raw_sync = "0.1"
clap = { version = "4", features = ["derive"] }
env_logger = "0"
